# Classification-Project

./: .gitignore  .pre-commit-config.yaml  README.md  config.yml  dockerfile  pyproject.toml  requirements.txt
Notebook/: 00_preprocess_data.ipynb  01_train_test.ipynb
models/: pipeline.pkl  template_features.pkl
src/: 00_preprocess_data.py  01_train_test.py  02_app.py  03_API.py  04_load_config,py  app.py  load_config.py  train.py
src/models/: pipeline.pkl  template_features.pkl
