[project]
name = "classification-project"
version = "0.1.0"
description = "A machine learning project for employee attrition classification"
authors = [{ name = "Your name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.116.1",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "python-dotenv==0.20.0",
    "lightgbm==4.3.0",
    "scikit-learn==1.4.2",
    "streamlit==1.24.0",
    "joblib==1.3.2",
    "uvicorn==0.30.0",
    "PyYAML==6.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
venv = true
