[project]
name = "classification-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "logging>=0.4.9.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
